<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="GreenMasterDO_Base" Id="{5ad275aa-23a9-47d4-b009-c6105067168f}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK GreenMasterDO_Base
VAR_IN_OUT
	DOut: DigitalOutputs;
END_VAR
VAR_INPUT
	H_GP1: BOOL;
	C_GP1: BOOL;
	ExhaustRunning: BOOL;
	F_QM1: BOOL;
	T_QM2: BOOL;
	R_QM1: BOOL;
	F_QM2: BOOL;
	SupplyRunning: BOOL;
	T_QM1_1: BOOL;
	T_QM1_2: BOOL;
	T_QM1_3: BOOL;
	T_QM1_4: BOOL;
	T_QM1_5: BOOL;
	T_QM1_6: BOOL;			
	AlarmRelayA: BOOL;
	AlarmRelayB: BOOL;
	AlarmRelayC: BOOL;
	AlarmRelayD: BOOL;
	P2: BOOL;
END_VAR
VAR_OUTPUT
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <LineIds Name="GreenMasterDO_Base">
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>